inclusão das demais paginas, portal do aluno, professor, sobre nós e contato

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -23,16 +23,16 @@
     <header class="cabecalho">
       <div class="container cabecalho-conteudo">
         <div class="marca">
-          <div><img src="/imagens/logo.jpg"></div>
+          <div><img src="../imagens/logo.jpg"></div>
                </div>
 
         <header>
 
           <nav class="menu">
             <a href="index.html" class="link">Cursos</a>
-            <a href="sobrenos.html" class="link">Sobre Nós</a>
-            <a href="portalaluno.html" class="link">Portal do Aluno</a>
-            <a href="portalprofessor.html" class="link">Portal do Professor</a>
+            <a href="sobre-nos.html" class="link">Sobre Nós</a>
+            <a href="portal-aluno.html" class="link">Portal do Aluno</a>
+            <a href="portal-professor.html" class="link">Portal do Professor</a>
             <a href="contato.html" class="link">Contato</a>            
             <button class="botao botao-principal">Entrar</button>
 
