--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../css/index-style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=stat_minus_1" />
   <title> IFL - Cursos </title>
 </head>
 
@@ -63,11 +64,15 @@
         <div class="grade">
           <!-- Card 1 -->
           <article class="cartao">
-            <img src="curso1.jpg" alt="Pequenos Investidores" class="cartao-imagem">
+            <img src="../imagens/curso1.jpg" alt="Pequenos Investidores" class="cartao-imagem">
             <div class="cartao-corpo">
               <h3 class="cartao-titulo">Pequenos Investidores: Educação Financeira Infantil</h3>
-              <p class="cartao-descricao">Curso introdutório sobre finanças voltado ao público infantil, com linguagem
-                simples e atividades práticas.</p>
+              <div class="cartao-texto">
+                <p class="cartao-descricao">Voltado para crianças a partir de 9 anos e para educadores ou responsáveis que desejam aprender a ensinar sobre finanças de forma simples e divertida. Este curso apresenta, de maneira lúdica, conceitos como o valor do dinheiro, moeda nacional e estrangeira e noções básicas de rendimento, despertando desde cedo a consciência financeira e o hábito de lidar com o dinheiro de forma responsável.</p>
+                <button class="ver-mais">
+                  <span class="material-symbols-outlined">stat_minus_1</span>
+                </button>
+              </div>
               <div class="cartao-detalhes">
                 <span class="etiqueta">Iniciação</span>
                 <span class="etiqueta neutra">2h</span>
@@ -81,11 +86,15 @@
 
           <!-- Card 2 -->
           <article class="cartao">
-            <img src="curso2.jpg" alt="Gestão Financeira para Pequenos Negócios" class="cartao-imagem">
+            <img src="../imagens/curso2.jpg" alt="Gestão Financeira para Pequenos Negócios" class="cartao-imagem">
             <div class="cartao-corpo">
               <h3 class="cartao-titulo">Gestão Financeira para Pequenos Negócios</h3>
-              <p class="cartao-descricao">Aprenda a gerenciar o fluxo de caixa e melhorar a saúde financeira do seu
-                pequeno negócio.</p>
+              <div class="cartao-texto">
+                <p class="cartao-descricao">Aprenda a administrar as finanças do seu negócio de forma simples e eficiente. Este curso foi desenvolvido para pequenos empreendedores que desejam compreender os conceitos básicos de educação financeira empresarial, como controle de caixa, precificação, fluxo de caixa, custos e lucros. Com uma linguagem acessível e prática, você aprenderá a tomar decisões mais seguras e fortalecer a sustentabilidade do seu negócio.</p>
+                <button class="ver-mais">
+                  <span class="material-symbols-outlined">stat_minus_1</span>
+                </button>
+              </div>
               <div class="cartao-detalhes">
                 <span class="etiqueta">Intermediário</span>
                 <span class="etiqueta neutra">4h</span>
@@ -99,14 +108,84 @@
 
           <!-- Card 3 -->
           <article class="cartao">
-            <img src="curso3.jpg" alt="Primeiros Passos em Educação Financeira" class="cartao-imagem">
+            <img src="../imagens/curso3.jpg" alt="Primeiros Passos em Educação Financeira" class="cartao-imagem">
             <div class="cartao-corpo">
               <h3 class="cartao-titulo">Primeiros Passos em Educação Financeira</h3>
-              <p class="cartao-descricao">Entenda os princípios básicos de finanças pessoais e aprenda a planejar seu
-                futuro.</p>
+              <div class="cartao-texto">
+                <p class="cartao-descricao">Dê início à sua jornada no mundo dos investimentos com segurança e clareza. Este curso introdutório apresenta os fundamentos do mercado financeiro, explicando de forma descomplicada o uso do API (Análise de Perfil do Investidor), como planejar seus recursos de acordo com seus objetivos e prazos, e as diferenças entre renda fixa e renda variável.</p>
+                <button class="ver-mais">
+                  <span class="material-symbols-outlined">stat_minus_1</span>
+                </button>
+              </div>
               <div class="cartao-detalhes">
                 <span class="etiqueta">Básico</span>
                 <span class="etiqueta neutra">3h</span>
+              </div>
+              <div class="cartao-acoes">
+                <button class="botao botao-borda">Detalhes</button>
+                <button class="botao botao-destaque">Inscrever-se</button>
+              </div>
+            </div>
+          </article>
+
+          <!-- Card 4 -->
+          <article class="cartao">
+            <img src="../imagens/curso4.jpg" alt="Pequenos Investidores" class="cartao-imagem">
+            <div class="cartao-corpo">
+              <h3 class="cartao-titulo">Alavancando Investimentos: Estratégias para o Mercado</h3>
+              <div class="cartao-texto">
+                <p class="cartao-descricao">Destinado a quem já possui experiência no mundo dos investimentos e deseja ir além. Neste curso, você aprenderá a analisar o comportamento do mercado, tomar decisões estratégicas e superar índices de referência (benchmark) com segurança. Descubra como alavancar seus investimentos, atuar na bolsa de valores e desenvolver o pensamento analítico necessário para alcançar a independência financeira e resultados consistentes no longo prazo.</p>
+                <button class="ver-mais">
+                  <span class="material-symbols-outlined">stat_minus_1</span>
+                </button>
+              </div>
+              <div class="cartao-detalhes">
+                <span class="etiqueta">Iniciação</span>
+                <span class="etiqueta neutra">2h</span>
+              </div>
+              <div class="cartao-acoes">
+                <button class="botao botao-borda">Detalhes</button>
+                <button class="botao botao-destaque">Inscrever-se</button>
+              </div>
+            </div>
+          </article>
+
+          <!-- Card 5 -->
+          <article class="cartao">
+            <img src="../imagens/curso5.jpg" alt="Pequenos Investidores" class="cartao-imagem">
+            <div class="cartao-corpo">
+              <h3 class="cartao-titulo">Reconstruindo sua Saúde Financeira</h3>
+              <div class="cartao-texto">
+                <p class="cartao-descricao">Recupere o equilíbrio das suas finanças e retome o controle da sua vida econômica. Neste curso, você aprenderá estratégias para sair das dívidas, renegociar de forma inteligente, evitar juros altos e reorganizar seu orçamento após a quitação. Além disso, apresentamos ideias práticas de pequenos projetos para geração de renda extra, ajudando você a construir uma nova fase financeira com mais segurança e autonomia.</p>
+                <button class="ver-mais">
+                    <span class="material-symbols-outlined">stat_minus_1</span>
+                </button>
+              </div>
+              <div class="cartao-detalhes">
+                <span class="etiqueta">Iniciação</span>
+                <span class="etiqueta neutra">2h</span>
+              </div>
+              <div class="cartao-acoes">
+                <button class="botao botao-borda">Detalhes</button>
+                <button class="botao botao-destaque">Inscrever-se</button>
+              </div>
+            </div>
+          </article>
+
+          <!-- Card 6 -->
+          <article class="cartao">
+            <img src="../imagens/curso6.jpg" alt="Pequenos Investidores" class="cartao-imagem">
+            <div class="cartao-corpo">
+              <h3 class="cartao-titulo">Certificação Financeira: Sua Porta de Entrada no Mercado</h3>
+              <div class="cartao-texto">
+                <p class="cartao-descricao">Destaque-se no mercado financeiro com certificações reconhecidas nacionalmente. Este curso prepara você para conquistar as certificações ANBIMA (CPA, C-Pro R e C-Pro I), essenciais para atuar com credibilidade e excelência no setor. Desenvolva seu conhecimento técnico, amplie suas oportunidades e fortaleça sua carreira como um profissional financeiro certificado.</p>
+                <button class="ver-mais">
+                  <span class="material-symbols-outlined">stat_minus_1</span>
+                </button>
+              </div>
+              <div class="cartao-detalhes">
+                <span class="etiqueta">Iniciação</span>
+                <span class="etiqueta neutra">2h</span>
               </div>
               <div class="cartao-acoes">
                 <button class="botao botao-borda">Detalhes</button>
@@ -128,6 +207,7 @@
         </nav>
       </div>
     </footer>
+    <script src="../js/teste.js"></script>
 </body>
 
 </html>
