--- a/src/main/resources/static/html/sobre-nos.html
+++ b/src/main/resources/static/html/sobre-nos.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,135 +8,78 @@
 </head>
 
 <body>
-    <!-- botão de acessibilidade-->
-    <div class="nav-container">
+    <!-- Cabeçalho -->
+    <header class="cabecalho">
+        <div class="container cabecalho-conteudo">
+            <div class="marca">
+                <div><a href="index.html"><img src="../imagens/logo.jpg"></a></div>
+            </div>
+
+            <nav class="menu">
+                <a href="index.html" class="link">Cursos</a>
+                <a href="sobre-nos.html" class="link">Quem somos</a>
+                <a href="portal-aluno.html" class="link">Portal do Aluno</a>
+                <a href="portal-professor.html" class="link">Portal do Professor</a>
+                <a href="contato.html" class="link">Contato</a>            
+                <button class="botao botao-principal">Entrar</button>
+            </nav>
+        </div>
+      <!-- botão de acessibilidade-->
         <div id="controles-acessibilidade">
             <button onclick="aumentarFonte()">A+</button>
             <button onclick="diminuirFonte()">A−</button>
             <button onclick="alternarContraste()">🔳 Contraste</button>
             <button onclick="alternarModo()">🌙</button>
         </div>
+    </header>
 
-        <!-- Cabeçalho -->
-        <header class="cabecalho">
-            <div class="container cabecalho-conteudo">
-                <div class="marca">
-                    <div><img src="../imagens/logo.jpg"></div>
-                </div>
-
-                <header>
-
-                    <nav class="menu">
-                        <a href="index.html" class="link">Cursos</a>
-                        <a href="sobre-nos.html" class="link">Sobre Nós</a>
-                        <a href="portal-aluno.html" class="link">Portal do Aluno</a>
-                        <a href="portal-professor.html" class="link">Portal do Professor</a>
-                        <a href="contato.html" class="link">Contato</a>
-                        <button class="botao botao-principal">Entrar</button>
-
-
-                    </nav>
-            </div>
-        </header>
-
+    <main>
         <section id="sobre-empresa">
             <h1>Quem Somos</h1>
-            <p>
-                Fundada com o propósito de transformar vidas por meio da educação, nossa empresa tem se dedicado a
-                oferecer cursos
-                de alta qualidade, acessíveis e relevantes para o mundo atual.
-            </p>
-
-            <h2>Missão</h2>
-            <p>
-                Promover o desenvolvimento pessoal e profissional dos nossos alunos, por meio de uma educação inovadora,
-                inclusiva
-                e de excelência.
-            </p>
-
-            <h2>Valores</h2>
-            <ul>
-                <li>Compromisso com a aprendizagem</li>
-                <li>Respeito à diversidade</li>
-                <li>Inovação constante</li>
-                <li>Transparência e ética</li>
-                <li>Valorização das pessoas</li>
-            </ul>
+            <article id="quem-somos">
+                <p>
+                    A ILF – Instituto Luiz Frias – foi criada em 2025 como uma homenagem ao legado inovador de Luiz Frias, fundador do PagSeguro e do PagBank. Atuando como um dos principais protagonistas da transformação digital no setor financeiro brasileiro, Luiz Frias impulsionou soluções seguras e acessíveis que impactaram milhões de pessoas e empreendedores em todo o país.
+                </p>
+                <p>
+                    Inspirada por esse compromisso com a inclusão e segurança financeira, a ILF nasce para ampliar ainda mais esse impacto, democratizando o acesso à educação financeira de qualidade. Promovendo oportunidades igualitárias para o desenvolvimento financeiro sustentável e consciente.
+                </p>
+            </article>
+            
+            <article id="missao">
+                <img src="../imagens/curso1.jpg" alt="">
+                <div id="conteudo-missao">
+                    <h2>Missão</h2>
+                    <p>
+                        Capacitar pessoas de todas as origens a conquistar segurança e autonomia financeira, promovendo conhecimento acessível, confiável e de alto padrão, inspirado no legado de inovação de Luiz Frias.
+                    </p>
+                </div>
+            </article>
+            <article id="valores">
+                <div id="conteudo-valores">
+                    <h2>Valores</h2>
+                    <ul>
+                        <li>Inclusão: Tornar a educação financeira acessível para todos, independentemente da condição socioeconômica.</li>
+                        <li>Inovação: Utilizar tecnologia e abordagens educacionais modernas para ensinar de forma eficiente e envolvente.</li>
+                        <li>Transparência: Fornecer informações claras, confiáveis e imparciais.</li>
+                        <li>Compromisso social: Contribuir efetivamente para o fortalecimento da cidadania financeira no Brasil.</li>
+                        <li>Excelência: Buscar continuamente a qualidade em nossos conteúdos e práticas pedagógicas.</li>
+                    </ul>
+                </div>
+                <img src="../imagens/curso1.jpg" alt="">
+            </article>
         </section>
+    </main>
 
-        <main>
-            <section id="equipe">
-                <div class="perfil">
-                    <img src="/imagens/images.jpeg" alt="Foto da Ana Julia Souza">
-                    <div class="info">
-                        <h2>Ana Julia Souza</h2>
-                        <p>História</p>
-                    </div>
-                </div>
-
-                <div class="perfil">
-                    <img src="/imagens/images.jpeg" alt="Foto da Caroline Nepomuceno">
-                    <div class="info">
-                        <h2>Caroline Nepomuceno</h2>
-                        <p>História</p>
-                    </div>
-                </div>
-
-                <div class="perfil">
-                    <img src="/imagens/images.jpeg" alt="Foto da Evelyn Suzarte">
-                    <div class="info">
-                        <h2>Evelyn Suzarte</h2>
-                        <p>História</p>
-                    </div>
-                </div>
-
-                <div class="perfil">
-                    <img src="/imagens/images.jpeg" alt="Foto da Geizielli Salles">
-                    <div class="info">
-                        <h2>Geizielli Salles</h2>
-                        <p>História</p>
-                    </div>
-                </div>
-
-                <div class="perfil">
-                    <img src="/imagens/images.jpeg" alt="Foto da Keylla">
-                    <div class="info">
-                        <h2>Keylla</h2>
-                        <p>História</p>
-                    </div>
-                </div>
-
-                <div class="perfil">
-                    <img src="/imagens/images.jpeg" alt="Foto da Leide Silva">
-                    <div class="info">
-                        <h2>Leide Silva</h2>
-                        <p>História</p>
-                    </div>
-                </div>
-
-                <div class="perfil">
-                    <img src="/imagens/images.jpeg" alt="Foto da Sara Almada">
-                    <div class="info">
-                        <h2>Sara Almada</h2>
-                        <p>História</p>
-                    </div>
-                </div>
-
-            </section>
-        </main>
-
-
-
-        <!-- Rodapé -->
-        <footer class="rodape">
-            <div class="container rodape-conteudo">
-                <p>© <strong>Instituto Luiz Freitas</strong> — Em parceria com SoulCode & PagBank</p>
-                <nav class="rodape-links">
-                    <a href="#">Política de Privacidade</a>
-                    <a href="#">Contato</a>
-                </nav>
-            </div>
-        </footer>
+    <!-- Rodapé -->
+    <footer class="rodape">
+        <div class="container rodape-conteudo">
+            <p>© <strong>Instituto Luiz Freitas</strong> — Em parceria com SoulCode & PagBank</p>
+            <nav class="rodape-links">
+                <a href="#">Política de Privacidade</a>
+                <a href="#">Contato</a>
+            </nav>
+        </div>
+    </footer>
 </body>
 
 </html>
