Organizei as seções do html e modifiquei o estilo e o layout
Padronização do plano de fundo do cabeçalho usando uma nova variável CSS, redefinições de CSS aprimoradas e atualização do layout da página "Sobre" para melhor estrutura e responsividade. Remoção do link "Contato" dos menus de navegação, ajuste dos direitos autorais do rodapé e aprimoramento do estilo das seções para uma aparência mais consistente.

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -20,8 +20,7 @@
           <a href="index.html" class="link">Cursos</a>
           <a href="sobre-nos.html" class="link">Quem somos</a>
           <a href="portal-aluno.html" class="link">Portal do Aluno</a>
-          <a href="portal-professor.html" class="link">Portal do Professor</a>
-          <a href="contato.html" class="link">Contato</a>            
+          <a href="portal-professor.html" class="link">Portal do Professor</a>            
           <button class="botao botao-principal">Entrar</button>
         </nav>
       </div>
@@ -192,7 +191,7 @@
   <!-- Rodapé -->
   <footer class="rodape">
     <div class="container rodape-conteudo">
-      <p>© <strong>Instituto Luiz Freitas</strong> — Em parceria com SoulCode & PagBank</p>
+      <p>&copy;<strong>Instituto Luiz Freitas</strong> — Em parceria com SoulCode & PagBank</p>
       <nav class="rodape-links">
         <a href="#">Política de Privacidade</a>
         <a href="#">Contato</a>
