--- a/src/main/resources/static/html/sobre-nos.html
+++ b/src/main/resources/static/html/sobre-nos.html
@@ -19,8 +19,7 @@
                 <a href="index.html" class="link">Cursos</a>
                 <a href="sobre-nos.html" class="link">Quem somos</a>
                 <a href="portal-aluno.html" class="link">Portal do Aluno</a>
-                <a href="portal-professor.html" class="link">Portal do Professor</a>
-                <a href="contato.html" class="link">Contato</a>            
+                <a href="portal-professor.html" class="link">Portal do Professor</a>           
                 <button class="botao botao-principal">Entrar</button>
             </nav>
         </div>
@@ -35,20 +34,22 @@
 
     <main>
         <section id="sobre-empresa">
-            <h1>Quem Somos</h1>
-            <article id="quem-somos">
-                <p>
-                    A ILF – Instituto Luiz Frias – foi criada em 2025 como uma homenagem ao legado inovador de Luiz Frias, fundador do PagSeguro e do PagBank. Atuando como um dos principais protagonistas da transformação digital no setor financeiro brasileiro, Luiz Frias impulsionou soluções seguras e acessíveis que impactaram milhões de pessoas e empreendedores em todo o país.
-                </p>
-                <p>
-                    Inspirada por esse compromisso com a inclusão e segurança financeira, a ILF nasce para ampliar ainda mais esse impacto, democratizando o acesso à educação financeira de qualidade. Promovendo oportunidades igualitárias para o desenvolvimento financeiro sustentável e consciente.
-                </p>
-            </article>
+            <div id="fundo-destaque-inicio">
+                <h1>QUEM SOMOS</h1>
+                <article id="quem-somos">
+                    <p>
+                        A ILF – Instituto Luiz Frias – foi criada em 2025 como uma homenagem ao legado inovador de Luiz Frias, fundador do PagSeguro e do PagBank. Atuando como um dos principais protagonistas da transformação digital no setor financeiro brasileiro, Luiz Frias impulsionou soluções seguras e acessíveis que impactaram milhões de pessoas e empreendedores em todo o país.
+                    </p>
+                    <p>
+                        Inspirada por esse compromisso com a inclusão e segurança financeira, a ILF nasce para ampliar ainda mais esse impacto, democratizando o acesso à educação financeira de qualidade. Promovendo oportunidades igualitárias para o desenvolvimento financeiro sustentável e consciente.
+                    </p>
+                </article>
+            </div>
             
             <article id="missao">
                 <img src="../imagens/curso1.jpg" alt="">
                 <div id="conteudo-missao">
-                    <h2>Missão</h2>
+                    <h2>MISSÃO</h2>
                     <p>
                         Capacitar pessoas de todas as origens a conquistar segurança e autonomia financeira, promovendo conhecimento acessível, confiável e de alto padrão, inspirado no legado de inovação de Luiz Frias.
                     </p>
@@ -56,7 +57,7 @@
             </article>
             <article id="valores">
                 <div id="conteudo-valores">
-                    <h2>Valores</h2>
+                    <h2>VALORES</h2>
                     <ul>
                         <li>Inclusão: Tornar a educação financeira acessível para todos, independentemente da condição socioeconômica.</li>
                         <li>Inovação: Utilizar tecnologia e abordagens educacionais modernas para ensinar de forma eficiente e envolvente.</li>
