--- a/src/main/resources/static/html/portal-aluno.html
+++ b/src/main/resources/static/html/portal-aluno.html
@@ -1,100 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/portal-contato.css">
-    <title> IFL - Cursos </title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portal do Aluno - Instituto Luiz Freitas</title>
+
+  <link rel="stylesheet" href="../css/portal-aluno.css">
+  <link rel="icon" href="../imagens/favicon.png">
 </head>
 
 <body>
-    <!-- botão de acessibilidade-->
-    <div class="nav-container">
-        <div id="controles-acessibilidade">
-            <button onclick="aumentarFonte()">A+</button>
-            <button onclick="diminuirFonte()">A−</button>
-            <button onclick="alternarContraste()">🔳 Contraste</button>
-            <button onclick="alternarModo()">🌙</button>
+  <header class="cabecalho">
+    <div class="container cabecalho-conteudo">
+      <div class="marca">
+        <a href="index.html">
+          <img src="../imagens/logo.jpg" alt="Logo Instituto Luiz Frias" />
+        </a>
+      </div>
+
+      <nav class="menu">
+        <a href="../html/index.html" class="link">Cursos</a>
+        <a href="../html/sobre-nos.html" class="link">Quem somos</a>
+        <a href="../html/portal-aluno.html" class="link ativo">Portal do Aluno</a>
+        <a href="../html/portal-professor.html" class="link">Portal do Professor</a>
+
+        <button class="botao botao-borda" id="botaoEntrar">Entrar</button>
+
+        <div class="usuario-info" id="usuarioInfo" style="display: none;">
+          <span id="nomeUsuario"></span>
+          <button class="botao botao-borda" id="botaoSair">Sair</button>
         </div>
+      </nav>
+    </div>
+  </header>
 
-        <!-- Cabeçalho -->
-        <header class="cabecalho">
-            <div class="container cabecalho-conteudo">
-                <div class="marca">
-                    <div><img src="../imagens/logo.jpg"></div>
-                </div>
+  <main class="container conteudo-principal">
+    <section>
+      <h1>Meus Cursos</h1>
+      <p>Veja os cursos em que você está matriculado.</p>
 
-                <header>
+      <div class="tabela-wrapper">
+        <table class="tabela">
+          <thead>
+            <tr>
+              <th>Curso</th>
+              <th>Professor</th>
+              <th>Data matrícula</th>
+            </tr>
+          </thead>
+          <tbody id="tabela-matriculas">
+            <tr><td colspan="4">Carregando...</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+  </main>
 
-                    <nav class="menu">
-                        <a href="index.html" class="link">Cursos</a>
-                        <a href="sobre-nos.html" class="link">Sobre Nós</a>
-                        <a href="portal-aluno.html" class="link">Portal do Aluno</a>
-                        <a href="portal-professor.html" class="link">Portal do Professor</a>
-                        <a href="contato.html" class="link">Contato</a>
-                        <button class="botao botao-principal">Entrar</button>
+  <footer class="rodape">
+    <div class="container rodape-conteudo">
+      <p>© Instituto Luiz Freitas — Portal do Aluno</p>
+    </div>
+  </footer>
 
-
-                    </nav>
-            </div>
-        </header>
-        <main>
-
-            <div class="tabela-container">
-                <h2 class="titulo-centralizado">Meus Cursos</h2>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">Matricula</th>
-                            <th scope="col">Curso</th>
-
-                            <th scope="col">Status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Pequenos Investidores: Educação Financeira Infantil</td>
-
-                            <td>
-                                <button class="botao botao-principal">Em Andamento</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Gestão Financeira para Pequenos Negócios</td>
-
-                            <td>
-                                <button class="botao botao-principal">Concluido</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Primeiros Passos em Educação Financeira</td>
-
-                            <td>
-                                <button class="botao botao-principal">Em Andamento</button>
-                            </td>
-
-                        </tr>
-                    </tbody>
-                </table>
-        </main>
-
-
-
-        <!-- Rodapé -->
-        <footer class="rodape">
-            <div class="container rodape-conteudo">
-                <p>© <strong>Instituto Luiz Freitas</strong> — Em parceria com SoulCode & PagBank</p>
-                <nav class="rodape-links">
-                    <a href="#">Política de Privacidade</a>
-                    <a href="#">Contato</a>
-                </nav>
-            </div>
-        </footer>
+  <script src="../js/aluno.js"></script>
 </body>
-
 </html>
