--- a/src/main/resources/static/html/sobre-nos.html
+++ b/src/main/resources/static/html/sobre-nos.html
@@ -1,86 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/sobre-nos.css">
-    <title> IFL - Cursos </title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quem Somos - Instituto Luiz Frias</title>
+
+  <link rel="stylesheet" href="../css/sobre-nos.css">
+  <link rel="icon" href="../imagens/favicon.png">
 </head>
 
 <body>
-    <!-- Cabeçalho -->
-    <header class="cabecalho">
-        <div class="container cabecalho-conteudo">
-            <div class="marca">
-                <div><a href="index.html"><img src="../imagens/logo.jpg"></a></div>
-            </div>
+  <header class="cabecalho">
+    <div class="container cabecalho-conteudo">
+      <div class="marca">
+        <a href="index.html">
+          <img src="../imagens/logo.jpg" alt="Logo Instituto Luiz Frias" />
+        </a>
+      </div>
 
-            <nav class="menu">
-                <a href="index.html" class="link">Cursos</a>
-                <a href="sobre-nos.html" class="link">Quem somos</a>
-                <a href="portal-aluno.html" class="link">Portal do Aluno</a>
-                <a href="portal-professor.html" class="link">Portal do Professor</a>           
-                <button class="botao botao-principal">Entrar</button>
-            </nav>
-        </div>
-      <!-- botão de acessibilidade-->
-        <div id="controles-acessibilidade">
-            <button onclick="aumentarFonte()">A+</button>
-            <button onclick="diminuirFonte()">A−</button>
-            <button onclick="alternarContraste()">🔳 Contraste</button>
-            <button onclick="alternarModo()">🌙</button>
-        </div>
-    </header>
+      <nav class="menu">
+        <a href="../html/index.html" class="link">Cursos</a>
+        <a href="../html/sobre-nos.html" class="link ativo">Quem somos</a>
+        <a href="../html/portal-aluno.html" class="link">Portal do Aluno</a>
+        <a href="../html/portal-professor.html" class="link">Portal do Professor</a>
 
-    <main>
-        <section id="sobre-empresa">
-            <div id="fundo-destaque-inicio">
-                <h1>QUEM SOMOS</h1>
-                <article id="quem-somos">
-                    <p>
-                        A ILF – Instituto Luiz Frias – foi criada em 2025 como uma homenagem ao legado inovador de Luiz Frias, fundador do PagSeguro e do PagBank. Atuando como um dos principais protagonistas da transformação digital no setor financeiro brasileiro, Luiz Frias impulsionou soluções seguras e acessíveis que impactaram milhões de pessoas e empreendedores em todo o país.
-                    </p>
-                    <p>
-                        Inspirada por esse compromisso com a inclusão e segurança financeira, a ILF nasce para ampliar ainda mais esse impacto, democratizando o acesso à educação financeira de qualidade. Promovendo oportunidades igualitárias para o desenvolvimento financeiro sustentável e consciente.
-                    </p>
-                </article>
-            </div>
-            
-            <article id="missao">
-                <img src="../imagens/curso1.jpg" alt="">
-                <div id="conteudo-missao">
-                    <h2>MISSÃO</h2>
-                    <p>
-                        Capacitar pessoas de todas as origens a conquistar segurança e autonomia financeira, promovendo conhecimento acessível, confiável e de alto padrão, inspirado no legado de inovação de Luiz Frias.
-                    </p>
-                </div>
-            </article>
-            <article id="valores">
-                <div id="conteudo-valores">
-                    <h2>VALORES</h2>
-                    <ul>
-                        <li>Inclusão: Tornar a educação financeira acessível para todos, independentemente da condição socioeconômica.</li>
-                        <li>Inovação: Utilizar tecnologia e abordagens educacionais modernas para ensinar de forma eficiente e envolvente.</li>
-                        <li>Transparência: Fornecer informações claras, confiáveis e imparciais.</li>
-                        <li>Compromisso social: Contribuir efetivamente para o fortalecimento da cidadania financeira no Brasil.</li>
-                        <li>Excelência: Buscar continuamente a qualidade em nossos conteúdos e práticas pedagógicas.</li>
-                    </ul>
-                </div>
-                <img src="../imagens/curso1.jpg" alt="">
-            </article>
-        </section>
-    </main>
+        <button class="botao botao-borda" id="botaoEntrar">Entrar</button>
 
-    <!-- Rodapé -->
-    <footer class="rodape">
-        <div class="container rodape-conteudo">
-            <p>© <strong>Instituto Luiz Freitas</strong> — Em parceria com SoulCode & PagBank</p>
-            <nav class="rodape-links">
-                <a href="#">Política de Privacidade</a>
-                <a href="#">Contato</a>
-            </nav>
+        <div class="usuario-info" id="usuarioInfo" style="display: none;">
+          <span id="nomeUsuario"></span>
+          <button class="botao botao-borda" id="botaoSair">Sair</button>
         </div>
-    </footer>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container sobre">
+    <h1>Quem Somos</h1>
+
+    <section class="bloco">
+      <p>
+        A ILF – Instituto Luiz Frias – foi criada em 2025 como uma homenagem ao legado inovador de Luiz Frias,
+        fundador do PagSeguro e do PagBank. Atuando como um dos principais protagonistas da transformação digital no
+        setor financeiro brasileiro, Luiz Frias impulsionou soluções seguras e acessíveis que impactaram milhões de
+        pessoas e empreendedores em todo o país.
+      </p>
+      <p>
+        Inspirada por esse compromisso com a inclusão e segurança financeira, a ILF nasce para ampliar ainda mais esse
+        impacto, democratizando o acesso à educação financeira de qualidade. Promovendo oportunidades igualitárias
+        para o desenvolvimento financeiro sustentável e consciente.
+      </p>
+    </section>
+
+    <section class="bloco imagem-esquerda">
+      <img src="../imagens/curso1.jpg" alt="Pessoas estudando representando a missão do instituto">
+      <div class="texto">
+        <h2>Missão</h2>
+        <p>
+          Capacitar pessoas de todas as origens a conquistar segurança e autonomia financeira, promovendo conhecimento
+          acessível, confiável e de alto padrão — inspirado no legado de inovação de Luiz Frias.
+        </p>
+      </div>
+    </section>
+
+    <section class="bloco imagem-direita">
+      <div class="texto">
+        <h2>Valores</h2>
+        <ul>
+          <li><strong>Inclusão:</strong> Tornar a educação financeira acessível para todos, independentemente da condição socioeconômica.</li>
+          <li><strong>Inovação:</strong> Utilizar tecnologia e abordagens educacionais modernas para ensinar de forma eficiente e envolvente.</li>
+          <li><strong>Transparência:</strong> Fornecer informações claras, confiáveis e imparciais.</li>
+          <li><strong>Compromisso social:</strong> Contribuir efetivamente para o fortalecimento da cidadania financeira no Brasil.</li>
+          <li><strong>Excelência:</strong> Buscar continuamente a qualidade em nossos conteúdos e práticas pedagógicas.</li>
+        </ul>
+      </div>
+      <img src="../imagens/curso1.jpg" alt="Representação dos valores do instituto">
+    </section>
+  </main>
+
+  <footer class="rodape">
+    <div class="container rodape-conteudo">
+      <p>© Instituto Luiz Frias — Em parceria com SoulCode & PagBank</p>
+      <a href="#">Política de Privacidade</a>
+    </div>
+  </footer>
+
+  <script src="../js/index.js"></script>
 </body>
-
 </html>
