--- a/src/main/resources/static/html/criar-curso.html
+++ b/src/main/resources/static/html/criar-curso.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Criar Curso - Instituto Luiz Freitas</title>
+  <title>Criar Curso - Instituto Luiz Frias</title>
   <link rel="stylesheet" href="../css/criar-curso.css">
   <link rel="icon" href="../imagens/favicon.png">
 </head>
