--- a/src/main/resources/static/html/portal-aluno.html
+++ b/src/main/resources/static/html/portal-aluno.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portal do Aluno - Instituto Luiz Freitas</title>
+  <title>Portal do Aluno - Instituto Luiz Frias</title>
 
   <link rel="stylesheet" href="../css/portal-aluno.css">
   <link rel="icon" href="../imagens/favicon.png">
@@ -58,10 +58,11 @@
 
   <footer class="rodape">
     <div class="container rodape-conteudo">
-      <p>© Instituto Luiz Freitas — Portal do Aluno</p>
+      <p>© Instituto Luiz Frias — Portal do Aluno</p>
     </div>
   </footer>
 
+  <script src="../js/index.js"></script>
   <script src="../js/aluno.js"></script>
 </body>
 </html>
