fix: testando e corrigindo para retorno do front

--- a/src/main/resources/static/html/portal-aluno.html
+++ b/src/main/resources/static/html/portal-aluno.html
@@ -43,8 +43,8 @@
         <table class="tabela">
           <thead>
             <tr>
-              <th>Curso</th>
-              <th>Professor</th>
+              <th>Id</th>
+              <th>Numero da matricula</th>
               <th>Data matrícula</th>
             </tr>
           </thead>
