Ajustes adicionais no front-end

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -34,11 +34,11 @@
     </div>
   </header>
 
-  <section class="banner">
-    <img src="../imagens/banner.png" alt="Banner principal" class="banner-img" />
-  </section>
-
   <main class="container">
+      <section class="banner">
+        <img src="../imagens/banner.png" alt="Banner principal" class="banner-img" />
+      </section>
+
     <section class="catalogo">
       <h1>Catálogo de Cursos</h1>
       <p>Conheça nossos cursos disponíveis e escolha o que mais combina com você.</p>
@@ -51,7 +51,12 @@
 
   <footer class="rodape">
     <div class="container rodape-conteudo">
-      <p>© Instituto Luiz Frias — Todos os direitos reservados</p>
+      <p class="rodape-direitos">© Instituto Luiz Frias — Em parceria com SoulCode & PagBank</p>
+
+      <div class="rodape-links">
+        <a href="#">Política de Privacidade</a>
+        <a href="mailto:contato@institutoluizfrias.edu.br">contato@institutoluizfrias.edu.br</a>
+      </div>
     </div>
   </footer>
 
