--- a/src/main/resources/static/html/portal-aluno.html
+++ b/src/main/resources/static/html/portal-aluno.html
@@ -59,7 +59,12 @@
 
   <footer class="rodape">
     <div class="container rodape-conteudo">
-      <p>© Instituto Luiz Frias — Portal do Aluno</p>
+      <p class="rodape-direitos">© Instituto Luiz Frias — Em parceria com SoulCode & PagBank</p>
+
+      <div class="rodape-links">
+        <a href="#">Política de Privacidade</a>
+        <a href="mailto:contato@institutoluizfrias.edu.br">contato@institutoluizfrias.edu.br</a>
+      </div>
     </div>
   </footer>
 
