--- a/src/main/resources/static/html/sobre-nos.html
+++ b/src/main/resources/static/html/sobre-nos.html
@@ -52,7 +52,7 @@
     </section>
 
     <section class="bloco imagem-esquerda">
-      <img src="../imagens/curso1.jpg" alt="Pessoas estudando representando a missão do instituto">
+      <img src="../imagens/missao.jpg" alt="Pessoas estudando representando a missão do instituto">
       <div class="texto">
         <h2>Missão</h2>
         <p>
@@ -73,14 +73,18 @@
           <li><strong>Excelência:</strong> Buscar continuamente a qualidade em nossos conteúdos e práticas pedagógicas.</li>
         </ul>
       </div>
-      <img src="../imagens/curso1.jpg" alt="Representação dos valores do instituto">
+      <img src="../imagens/valores.png" alt="Representação dos valores do instituto">
     </section>
   </main>
 
   <footer class="rodape">
     <div class="container rodape-conteudo">
-      <p>© Instituto Luiz Frias — Em parceria com SoulCode & PagBank</p>
-      <a href="#">Política de Privacidade</a>
+      <p class="rodape-direitos">© Instituto Luiz Frias — Em parceria com SoulCode & PagBank</p>
+
+      <div class="rodape-links">
+        <a href="#">Política de Privacidade</a>
+        <a href="mailto:contato@institutoluizfrias.edu.br">contato@institutoluizfrias.edu.br</a>
+      </div>
     </div>
   </footer>
 
