--- a/src/main/resources/static/html/portal-professor.html
+++ b/src/main/resources/static/html/portal-professor.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" href="../css/portal-professor.css">
   <link rel="icon" href="../imagens/favicon.png">
+  <!-- Ícones -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -37,7 +39,7 @@
   <main class="container conteudo-principal">
     <section>
       <h1>Meus Cursos</h1>
-      <p>Gerencie seus cursos e veja seus alunos matriculados.</p>
+      <p>Gerencie seus cursos e visualize os alunos matriculados.</p>
 
       <button class="botao botao-principal" id="novoCursoBtn">+ Novo Curso</button>
 
@@ -51,13 +53,24 @@
             </tr>
           </thead>
           <tbody id="tabela-cursos">
-            <tr><td colspan="4">Carregando...</td></tr>
+            <tr>
+              <td>Curso de Java</td>
+              <td>Introdução à linguagem Java</td>
+              <td>
+                <div class="acoes">
+                  <button class="acao editar" title="Editar"><i class="bi bi-pencil-fill"></i></button>
+                  <button class="acao excluir" title="Excluir"><i class="bi bi-trash-fill"></i></button>
+                  <button class="acao alunos" title="Ver alunos"><i class="bi bi-people-fill"></i></button>
+                </div>
+              </td>
+            </tr>
           </tbody>
         </table>
       </div>
     </section>
   </main>
 
+  <!-- Modal Curso -->
   <div class="modal" id="modalCurso">
     <div class="modal-conteudo">
       <h2 id="modalTitulo">Novo Curso</h2>
@@ -81,6 +94,7 @@
     </div>
   </div>
 
+  <!-- Modal Alunos -->
   <div class="modal" id="modalAlunos">
     <div class="modal-conteudo">
       <h2>Alunos Matriculados</h2>
@@ -94,7 +108,12 @@
 
   <footer class="rodape">
     <div class="container rodape-conteudo">
-      <p>© Instituto Luiz Frias — Portal do Professor</p>
+      <p class="rodape-direitos">© Instituto Luiz Frias — Em parceria com SoulCode & PagBank</p>
+
+      <div class="rodape-links">
+        <a href="#">Política de Privacidade</a>
+        <a href="mailto:contato@institutoluizfrias.edu.br">contato@institutoluizfrias.edu.br</a>
+      </div>
     </div>
   </footer>
 
